deploy/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: infrabox
    namespace: infrabox-system
    annotations:
        kubernetes.io/ingress.class: "nginx"
        #kubernetes.io/tls-acme: "true"
        #ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
    rules:
    -
        host: infrabox.example.com
        http:
            paths:
            -
                path: /docs
                backend:
                    serviceName: infrabox-static
                    servicePort: 80
            -
                path: /dashboard
                backend:
                    serviceName: infrabox-static
                    servicePort: 80
            -
                path: /api/dashboard
                backend:
                    serviceName: infrabox-dashboard-api
                    servicePort: 8080
            -
                path: /api/cli
                backend:
                    serviceName: infrabox-api
                    servicePort: 8080
            -
                path: /api/job
                backend:
                    serviceName: infrabox-job-api
                    servicePort: 8080
            -
                path: /github/hook
                backend:
                    serviceName: infrabox-github-trigger
                    servicePort: 8080
            -
                path: /github/auth
                backend:
                    serviceName: infrabox-dashboard-api
                    servicePort: 8080
            -
                path: /live/dashboard
                backend:
                    serviceName: infrabox-dashboard-api
                    servicePort: 8080
            -
                path: /v2
                backend:
                    serviceName: infrabox-docker-registry
                    servicePort: 8080
#    tls:
#        - hosts:
#            - infrabox.example.com
#          secretName: infrabox-tls-certs
